# particlesim-pico

./: .gitignore  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  MPU6050.cpp  MPU6050.h  README.md  README_de.md  active_stages.def  active_universes.def  anim_helpers.cpp  anim_helpers.h  animations_basic.cpp  animations_basic.h  hub75.cpp  hub75.h  hub75.pio  particlesim.cpp  particlesim.h  png_to_header.py  simulation.cpp  simulation.h  snake.cpp  snake.h  stages.cpp
gol/: gol_all.h  gol_glider1.h  gol_glider2.h  gol_o112p15.h  gol_p144.h  gol_pulsar.h  gol_rpentomino.h  gol_ships.h
images/: img_all.h  img_blank.h  img_disttest.h  img_dual.h  img_linrainbow.h  img_maze.h  img_rgbm.h  img_single.h  img_square8.h  img_zigzag.h
scripts/: checksize.py  openocd.sh  png_to_header.py  rp2040.cfg
